k8s/drafts/audiobookshelf/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: { { .Chart.Name } }
  labels:
    app: { { .Chart.Name } }
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "audiobookshelf.cute.haus"
      secretName: cute-haus-tls
  rules:
    - host: "audiobookshelf.cute.haus"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: { { .Chart.Name } }
                port:
                  number: 80
